[tool.poetry]
name = "bigbedbot-py"
version = "0.1.0"
description = ""
authors = ["mikezom <mikezom3721@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
graia-ariadne = {extras = ["full"], version = "^0.7.6"}
prompt-toolkit = "^3.0.29"
graia-saya = "^0.0.15"
numpy = "^1.22.4"
regex = "^2022.6.2"
graiax-silkcoder = "^0.2.8"
bs4 = "^0.0.1"
requests = "^2.28.0"
selenium = "^4.2.0"
feedparser = "^6.0.10"
thefuzz = "^0.19.0"
python-levenshtein = "^0.12.2"
pillow = "^9.1.1"
jieba = "^0.42.1"
Cython = "^0.29.21"
librosa = "^0.8.0"
matplotlib = "^3.3.1"
phonemizer = "^2.2.1"
scipy = "^1.5.2"
tensorboard = "^2.3.0"
torchvision = "^0.7.0"
Unidecode = "^1.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "tuna-tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = false